// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAlert Dismissable renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1nshtlu-boxStyles-GlobalAlert"
  >
    <div
      class="css-10khfcq-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-qhpjst-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.118 20.05-9.35-17.97A1.983 1.983 0 0 0 11.998 1c-.75 0-1.43.41-1.77 1.08L.878 20.05c-.33.63-.3 1.37.06 1.98.37.61 1 .97 1.71.97h18.7c.71 0 1.35-.36 1.71-.97a2 2 0 0 0 .06-1.98ZM11.998 19c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1Zm1-5c0 .55-.45 1-1 1s-1-.45-1-1V9c0-.55.45-1 1-1s1 .45 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1qnzlr7-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-6j1v6l-boxStyles-Text"
          >
            Alert description.
          </p>
        </div>
      </div>
      <button
        aria-label="Close"
        class="css-12jvszj-BaseButton-GlobalAlertCloseButton"
        type="button"
      >
        <span>
          <span
            class="css-oobk4c-Button"
          >
            Close
          </span>
          <span
            aria-live="assertive"
          />
        </span>
        <svg
          aria-hidden="true"
          class="css-10mbdw9-Button"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone info renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1wlrpz7-boxStyles-GlobalAlert"
  >
    <div
      class="css-vh758l-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-qhpjst-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-6j1v6l-boxStyles-Text"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone warning renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1nshtlu-boxStyles-GlobalAlert"
  >
    <div
      class="css-10khfcq-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-qhpjst-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.118 20.05-9.35-17.97A1.983 1.983 0 0 0 11.998 1c-.75 0-1.43.41-1.77 1.08L.878 20.05c-.33.63-.3 1.37.06 1.98.37.61 1 .97 1.71.97h18.7c.71 0 1.35-.36 1.71-.97a2 2 0 0 0 .06-1.98ZM11.998 19c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1Zm1-5c0 .55-.45 1-1 1s-1-.45-1-1V9c0-.55.45-1 1-1s1 .45 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-13n9wj6-boxStyles-GlobalAlert"
    >
      <div
        class="css-1k241lf-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-6j1v6l-boxStyles-Text"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
